add initial scss css files and styling

--- a/index.html
+++ b/index.html
@@ -6,38 +6,13 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!-- no search engine has used keywords for a long time. But they're here so no one asks why they're missing. -->
-    <meta
-      name="keywords"
-      content="sandbox,3D,avatar,craft,puzzles,roblox,build,world,blocks,multiplayer,friends,coding,minecraft,pkxd"
-    />
-    <meta
-      name="description"
-      content="Cubric is a multi-player 3D world builder that offers the freedom to create and explore, leveraging unique furnished blueprints and customizable items."
-    />
-    <link
-      rel="icon"
-      href="./assets/Cubric_favicon_16x16.jpg"
-      type="image/jpg"
-      sizes="16x16"
-    />
-    <link
-      rel="icon"
-      href="./assets/Cubric_favicon_32x32.jpg"
-      type="image/jpg"
-      sizes="32x32"
-    />
-    <link
-      rel="icon"
-      href="./assets/Cubric_favicon_180x180.jpg"
-      type="image/jpg"
-      sizes="180x180"
-    />
-    <link
-      rel="icon"
-      href="./assets/Cubric_favicon_192x192.jpg"
-      type="image/jpg"
-      sizes="192x192"
-    />
+    <meta name="keywords" content="sandbox,3D,avatar,craft,puzzles,roblox,build,world,blocks,multiplayer,friends,coding,minecraft,pkxd" />
+    <meta name="description" content="Cubric is a multi-player 3D world builder that offers the freedom to create and explore, leveraging unique furnished blueprints and customizable items." />
+    <link rel="icon" href="./assets/Cubric_favicon_16x16.jpg" type="image/jpg" sizes="16x16" />
+    <link rel="icon" href="./assets/Cubric_favicon_32x32.jpg" type="image/jpg" sizes="32x32" />
+    <link rel="icon" href="./assets/Cubric_favicon_180x180.jpg" type="image/jpg" sizes="180x180" />
+    <link rel="icon" href="./assets/Cubric_favicon_192x192.jpg" type="image/jpg" sizes="192x192" />
+    <link rel="stylesheet" type="text/css" href="./styles/styles.css" />
   </head>
 </html>
 <body>
