--- a/index.html
+++ b/index.html
@@ -20,10 +20,12 @@
         <div class="spacer">
 
         </div>
-        <div class="available__wrapper">
-            <p class="available__text">Available soon on</p>
-            <a href="#" target="_blank"><img class="available__logo" src="./assets/AppStore.png" alt="Coming soon to Apple App Store"></a>
-            <a href="#" target="_blank"><img class="available__logo" src="./assets/GooglePlay.png" alt="Coming soon to Google Play"></a>
+        <div class="available">
+            <div class="available__content-wrapper">
+              <p class="available__text">Available soon on</p>
+              <a href="#" target="_blank"><img class="available__logo" src="./assets/AppStore.png" alt="Coming soon to Apple App Store"></a>
+              <a href="#" target="_blank"><img class="available__logo" src="./assets/GooglePlay.png" alt="Coming soon to Google Play"></a>
+            </div>
         </div>
         <div class="splash__wrapper">
             <main class="splash__content">
