adjust size of logo & coming soon to better match orig. adjust spacing of them as well

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
     <div class="outer-wrapper">
         <div class="spacer">
-
+          &nbsp;
         </div>
         <div class="available">
             <div class="available__content-wrapper">
@@ -30,8 +30,8 @@
         <div class="splash__wrapper">
             <main class="splash__content">
                 <section class="splash__content-upper">
-                    <img class="splash__logo" alt="Cubric Logo" src="./assets/Cubric_Logo_web.png" style="display: block; margin: 30px auto 0 auto; width: 210px;"/>
-                    <img class="splash__comingsoon" alt="Coming Soon" src="./assets/ComingSoon.png" style="display: block; margin: 10px auto 0 auto; width: 436px;"/>
+                    <img class="splash__logo" alt="Cubric Logo" src="./assets/Cubric_Logo_web.png" />
+                    <img class="splash__comingsoon" alt="Coming Soon" src="./assets/ComingSoon.png" />
                 </section>
                 <section class="splash__content-lower">
                     <div class="bubble">
