style lower content area including bubble and social, add separate bg image for mobile

--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
                         <p class="social__text">look for us on</p>
                         <div class="social__logos-wrapper">
                           <a href="https://www.youtube.com/channel/UCpkHeyWGwAUI475fCwRtTPA" target="_blank">
-                            <img class="social__logo-image" src="./assets/logo-youtube.png" style="width: 32px; margin-right: 25px;">
+                            <img class="social__logo-yt" src="./assets/logo-youtube.png" style="width: 32px;">
                           </a>
                           <a href="https://www.facebook.com/Cubric-Mobile-Game-114709418199389" target="_blank">
-                            <img class="social__logo-image" src="./assets/logo-facebook.png" style="width: 28px; margin-right: 25px;">
+                            <img class="social__logo-fb" src="./assets/logo-facebook.png" style="width: 28px;">
                           </a>
                           <a href="https://www.instagram.com/cubric_mobile_game/" target="_blank">
-                            <img class="social__logo-image" src="./assets/logo-instagram.png" style="width: 28px;">
+                            <img class="social__logo-ig" src="./assets/logo-instagram.png" style="width: 28px;">
                           </a>
                         </div>
                 </section>
